--- a/configs/msg_gateway.yaml
+++ b/configs/msg_gateway.yaml
@@ -17,7 +17,7 @@ grpc_server:
     key_file: ./configs/tls/grpc/server.key
     enabled: true
 etcd:
-  endpoints: ["127.0.0.1:2379","127.0.0.1:2380","127.0.0.1:2381"]     #  这是etcd集群的节点
+  endpoints: ["127.0.0.1:2379"]     #  这是etcd集群的节点
   username:
   password:
   schema: goim
@@ -25,9 +25,9 @@ etcd:
   write_timeout: 5000
   dial_timeout: 5000
 redis:
-  address: ["goim-redis-01:7001","goim-redis-02:7002","goim-redis-03:7003","goim-redis-04:7004"]
+  address: ["127.0.0.1:6379"]
   db: 0
-  password: goim2023
+  password:
   prefix: "goim:"
 
 
@@ -51,18 +51,3 @@ ws_server:
   chan_server_unregister: 1000
   max_connections: 20000
   min_time_interval: -1
-
-
-
-#mysql:
-#  max_open_conns: 20
-#  max_idle_conns: 10
-#  max_lifetime: 120000
-#  max_idle_time: 7200000
-#  charset: utf8mb4
-#  sources:
-#    - {addr: "127.0.0.1:3306",username: root,password: 123123123,db: goim_user}
-#    - {addr: "goim-mysql-user-02:13307",username: root,password: 123123123,db: goim_user}  # 集群
-#  replicas:
-#    - {addr: "goim-mysql-user-03:13308",username: root,password: 123123123,db: goim_user}
-#    - {addr: "goim-mysql-user-04:13309",username: root,password: 123123123,db: goim_user}
